tests/ui/reachable/expr_tup.stderr
error: unreachable expression
  --> $DIR/expr_tup.rs:9:38
   |
LL |     let x: (usize, usize) = (return, 2);
   |                              ------  ^ unreachable expression
   |                              |
   |                              any code following this expression is unreachable
   |
note: the lint level is defined here
  --> $DIR/expr_tup.rs:4:9
   |
LL | #![deny(unreachable_code)]
   |         ^^^^^^^^^^^^^^^^

error: unreachable expression
  --> $DIR/expr_tup.rs:14:29
   |
LL |     let x: (usize, usize) = (2, return);
   |                             ^^^^------^
   |                             |   |
   |                             |   any code following this expression is unreachable
   |                             unreachable expression

error: aborting due to 2 previous errors

